--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "presentation-post-process",
+  "name": "ugh",
   "version": "0.0.0",
   "repository": {
     "type": "git",
-    "url": "https://github.com/brownerd/postprocess"
+    "url": "https://github.com/brownerd/ugh"
   },
   "dependencies": {},
   "devDependencies": {
@@ -18,13 +18,13 @@
     "bespoke-touch": "^1.0.0",
     "browser-sync": "^2.18.13",
     "debowerify": "^0.7.1",
-    "gh-pages": "^0.2.0",
     "gulp": "^3.9.1",
     "gulp-autoprefixer": "0.0.7",
     "gulp-browserify": "^0.5.0",
     "gulp-connect": "^2.0.5",
     "gulp-csso": "^0.2.9",
     "gulp-evil-icons": "~0.1.5",
+    "gulp-gh-pages": "^0.5.4",
     "gulp-jade": "^0.6.0",
     "gulp-plumber": "^0.6.3",
     "gulp-rename": "^1.2.0",
